apps/services/mlops/turbopilot/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: turbopilot
  labels:
    app: turbopilot
spec:
  selector:
    app: turbopilot
  ports:
  - name: http
    port: 80
    targetPort: 18080
    protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: turbopilot-tailscale
  labels:
    app: turbopilot
  annotations:
    tailscale.com/hostname: "copilot"
spec:
  selector:
    app: turbopilot
  ports:
    - name: http
      port: 80
      targetPort: 18080
      protocol: TCP
  loadBalancerClass: tailscale
  type: LoadBalancer
